--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,30 @@
-
+version: '3.9'
 
 services:
   db:
     image: postgres:16
+    container_name: backend_auth-db
+    restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mydb
-    ports:
-      - "5432:5432"
+      POSTGRES_PASSWORD: yourpassword
+      POSTGRES_DB: fastapi_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
   web:
     build: .
+    container_name: backend_auth-web
+    restart: always
     depends_on:
       - db
+    environment:
+      DATABASE_URL: postgresql+psycopg2://postgres:yourpassword@db:5432/fastapi_db
     ports:
       - "8000:8000"
-    command: ["/wait-for-it.sh", "db:5432", "--", "uvicorn", "main:app", "--host", "0.0.0.0", "--reload"]
-    env_file:
-      - .env
+    command: sh -c "/wait-for-it.sh db:5432 -- uvicorn main:app --host 0.0.0.0 --reload"
 
 volumes:
   postgres_data:
