--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,18 @@ fastapi==0.116.1
 greenlet==3.2.4
 h11==0.16.0
 idna==3.10
+MarkupSafe==3.0.2
 passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
+python-http-client==3.3.7
 python-jose==3.5.0
 python-multipart==0.0.20
 rsa==4.9.1
+sendgrid==6.12.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
@@ -23,3 +26,4 @@ starlette==0.47.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 uvicorn==0.35.0
+Werkzeug==3.1.3
